# agentic-dashboard

./: .gitattributes  .gitignore  AI_ARCHITECT_SYNC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Projekt.txt  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  sprint-review-v1.4.0.pptx  sprint-review-v1.6.0.pptx  tailwind.config.js  vite.config.ts  vitest.config.integration.ts  vitest.config.ts
.claude/: PROJECT_CONTEXT.md  project-context.md  settings.json
Softwareprozess/: Anforderungsanalyse.md  Entwurf-Favoriten-Grid.md  Entwurf-SessionManager.md  Impeccable-Redesign-Anleitung.md  Phase.txt  Planung.md  Protokoll-Design.md  arc42-specification.md  lessons-learned.md
e2e/: playwright.config.ts  smoke.spec.ts
praesentation/: deck.md  scoping.md
reports/: 2026-05-08-scrollback-history-PLAN.md  2026-05-08-scrollback-history-status.html  2026-05-08-session-loading-real-tests-PLAN.md  2026-05-08-session-loading-status.html  clipboard-rightclick-multi-agent-analyse-v1.6.26.html  clipboard-rightclick-multi-agent-analyse-v1.6.26.md  clipboard-rightclick-multi-agent-analyse-v1.6.26.pptx  hier-ist-eine-anleitung-polished-meadow.md  ich-will-den-stand-partitioned-pancake.md  origin-master-pre-reconcile.bundle  reflog-pre-reconcile.txt  remote-commits-discarded-reference.txt  session-scroll-bug-analyse-v1.6.26.html  session-scroll-bug-analyse-v1.6.26.md  session-scroll-bug-iteration-2-v1.6.26.html  session-scroll-bug-iteration-2-v1.6.26.md  session-scroll-multi-agent-analyse-v1.6.26.html  session-scroll-multi-agent-analyse-v1.6.26.md  terminal-scroll-layout-switch-analyse-v1.html  terminal-scroll-layout-switch-analyse-v1.md
scripts/: bump-version.mjs  copy-to-desktop.mjs
src/: App.integration.test.tsx  App.test.tsx  App.tsx  DetachedViewApp.tsx  DiffWindowApp.test.tsx  DiffWindowApp.tsx  LogWindowApp.test.tsx  LogWindowApp.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  log_reader.rs  main.rs  settings.rs  util.rs  validation.rs
src-tauri/src/adp/: emitter.rs  envelope.rs  mod.rs
src-tauri/src/github/: commands.rs  kanban.rs  mod.rs  project.rs
src-tauri/src/pipeline/: commands.rs  error_detection.rs  executor.rs  history.rs  mod.rs  parser.rs  retry.rs  runner.rs  schema.rs  state_machine.rs
src-tauri/src/session/: agent_detector.rs  commands.rs  diff.rs  file_reader.rs  folder_actions.rs  manager.rs  mod.rs
src-tauri/src/session/agent_detector/: events.rs  mod.rs  parser.rs  state.rs
src-tauri/tests/: jsonl_watcher_integration.rs  session_diff.rs  session_discovery.rs
tasks/: 2026-05-12-session-diff-window-design.md  docs-inventory.md  ideas.md  lessons.md  sprint-plan-v1.5-v2.0.md  testing-spec.md  todo.md  user-stories-pipeline.md
(+337 files in other folders)
