[package]
name = "agenticexplorer"
version = "1.6.1"
description = "AgenticExplorer - Manage and monitor Claude CLI sessions"
authors = ["hossoOG"]
license = "MIT"
repository = "https://github.com/hossoOG/agentic-dashboard"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "agenticexplorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
log = "0.4"
env_logger = "0.11"
regex = "1"
dirs = "6"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
